# EasyTier

./: .envrc  .gitignore  .rust-analyzer.toml  AGENTS.md  COMMIT_MESSAGE.txt  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  EasyTier.code-workspace  HTTP_MULTI_NODE_SUPPORT.md  LICENSE  PUSH_COMMANDS.ps1  README.md  README_CN.md  README_LOCAL_PORT_FORWARD.md  REFACTOR_CHECKLIST.md  REFACTOR_SPEC.md  REFACTOR_SUMMARY.md  REFACTOR_TASKS.md  android.nix  biome.json  ci-log.txt  easytier-core  et.db  et.db-shm  et.db-wal  flake.nix  move_artifacts.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  public server.html  rust-toolchain.toml
easytier/: .clippy.toml  4way-handshake-spec.md  Cargo.toml  README_CN.md  build.rs
easytier-cli/: Cargo.toml
easytier-cli/src/: main.rs
easytier-contrib/easytier-android-jni/: Cargo.toml  README.md  build.rs  build.sh  example_config.toml  exports.map
easytier-contrib/easytier-android-jni/src/: callback.rs  config_server_api.rs  data_plane_api.rs  error.rs  json_rpc_api.rs  lib.rs  logger.rs  network_api.rs  strings.rs
easytier-contrib/easytier-ffi/: Cargo.toml
easytier-contrib/easytier-ffi/examples/: csharp.cs  example_data_plane_async.c  example_ffi_call.c
easytier-contrib/easytier-ffi/src/: config_server.rs  data_plane.rs  data_plane_async.rs  error.rs  instance_api.rs  json_rpc.rs  lib.rs  state.rs  strings.rs  tests.rs  types.rs
easytier-contrib/easytier-ios/: Cargo.toml
easytier-contrib/easytier-ios/include/: easytier_ios.h
easytier-contrib/easytier-ios/src/: lib.rs
easytier-contrib/easytier-node-discovery/: ARCHITECTURE.md  Cargo.toml  README.md
easytier-contrib/easytier-node-discovery/examples/: easytier_node_discovery.py  refresh-nodes.sh
easytier-contrib/easytier-node-discovery/src/: main.rs
easytier-contrib/easytier-ohrs/: .gitignore  Cargo.toml  README.md  build.rs  env.sh
easytier-contrib/easytier-ohrs/package/: CHANGELOG.md  LICENSE  README.md  index.ets  oh-package.json5
easytier-contrib/easytier-ohrs/src/: config.rs  config_meta.rs  config_repo.rs  exports.rs  kernel_bridge.rs  lib.rs  local_socket_service.rs  native_log.rs  platform.rs  runtime.rs  runtime_state.rs  schema_service.rs  share_link_service.rs  stored_config.rs
easytier-contrib/easytier-uptime/: .env.development  .env.example  .env.production  .gitignore  Cargo.toml  README.md  start-dev.sh  start-prod.sh  stop-prod.sh  test-integration.sh  test_health_stats.rs
easytier-contrib/easytier-uptime/frontend/: package-lock.json  package.json  vite.config.js
easytier-contrib/easytier-uptime/src/: config.rs  health_checker.rs  health_checker_manager.rs  main.rs
easytier-core/: Cargo.toml  build.rs
easytier-core/proto/: cli.proto
easytier-core/src/: config.rs  dhcp.rs  instance.rs  lib.rs  listener.rs  magic_dns.rs  main.rs  packet.rs  process_runtime.rs  runtime_config.rs  runtime_time.rs  stats_manager.rs  stun.rs  task.rs  token_bucket.rs  transport.rs  tunnel.rs  vpn_portal.rs
easytier-core/src/arch/: windows.rs
easytier-core/src/common/: config.rs  config_fs.rs  constants.rs  error.rs  global_ctx.rs  ifcfg.rs  mod.rs  netns.rs  network.rs  rkyv_util.rs  stun.rs
easytier-core/src/config/: api.rs  api_input.rs  encryption.rs  gateway.rs  mod.rs  peers.rs  runtime.rs  toml.rs
easytier-core/src/connectivity/: composite.rs  mod.rs  (+3 more)
easytier-core/testdata/: wasi_core_instance_create.json
easytier-core/tests/: feature_profiles.rs
easytier-gui/: .env  .gitignore  .npmrc  Cargo.toml  LICENSE  README.md  components.json  eslint.config.js  flake.nix  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
easytier-gui/locales/: cn.yml  en.yml  zh-CN.yml
easytier-gui/src/: App.vue  auto-imports.d.ts  launcher.rs  main.rs  main.ts  shims-tauri-plugin-vpnservice-api.d.ts  shims-vue-router-auto.d.ts  styles.css  text_list.rs  toggle_switch.rs  typed-router.d.ts  vite-env.d.ts
easytier-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
easytier-proto/: Cargo.toml
easytier-proto/proto/: api_config.proto  web.proto
easytier-proto/src/: acl.rs  api.rs  api_logger.proto  api_manage.proto  common.rs  core_config.proto  core_config.rs  core_peer.proto  core_peer.rs  error.proto  error.rs  lib.rs  magic_dns.proto  magic_dns.rs  peer_rpc.rs  tests.proto  tests.rs  web.rs
easytier-rpc-build/: Cargo.toml  README.md
easytier-rpc-build/src/: lib.rs
easytier-web/: Cargo.toml  build.rs
easytier-web/frontend/: index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
easytier-web/frontend-lib/: .gitignore  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.app.json  tsconfig.build.json  vite.config.ts  vitest.config.ts
easytier-web/locales/: app.yml
easytier-web/migrations/: 20241026_init.sql
easytier-web/resources/: geoip2-cn.mmdb
easytier-web/src/: db.rs  main.rs  webhook.rs
easytier/benches/: README.md  acl_hotpath.rs  counter_contention.rs  packet_bytes_extraction.rs  tx_throughput.rs  zc_packet.rs
easytier/docs/: core_config_peer_context_refactor.md  core_peers_refactor.md  credential_peer.md  peer_conn_secure_mode_v3.md  relay_peer_manager_design.md  udp_hole_punch_core_refactor.md
easytier/examples/: cpu_hotspot_ring.rs
easytier/locales/: app.yml
easytier/proto/: cli.proto
easytier/src/: core.rs  easytier-cli.rs  easytier-core.rs  host_runtime.rs  hotpath_off.rs  instance_manager.rs  launcher.rs  lib.rs  local_port_forward.rs  manager.rs  utils.rs
easytier/tests/: flow_policy_report_test.rs
health-check-cli/: Cargo.toml
health-check-cli/src/: main.rs
tauri-plugin-vpnservice/: .gitattributes  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-vpnservice/android/: build.gradle.kts
tauri-plugin-vpnservice/guest-js/: index.ts
tauri-plugin-vpnservice/ios/: Package.swift  README.md
tauri-plugin-vpnservice/permissions/: default.toml
tauri-plugin-vpnservice/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+1442 files in other folders)
