[workspace]
resolver = "2"
members = [
    "easytier",
    "easytier-gui/src-tauri",
    "easytier-rpc-build",
    "easytier-web",
    "easytier-contrib/easytier-ffi",
    "easytier-contrib/easytier-uptime",
    "easytier-contrib/easytier-android-jni",
]
default-members = ["easytier", "easytier-web"]
exclude = [
    "easytier-contrib/easytier-ohrs", # it needs ohrs sdk
]

[patch.crates-io]
# Use a local copy of fastbloom that does not rely on AtomicU64 (better compatibility on targets without 64-bit atomics)
fastbloom = { path = "vendor/fastbloom" }

[profile.dev]
panic = "unwind"
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
