[workspace]
resolver = "2"
members = ["easytier"]
default-members = ["easytier"]
exclude = [
    "easytier-contrib/easytier-ohrs", # it needs ohrs sdk
    "easytier-gui/src-tauri",
    "easytier-rpc-build",
    "easytier-web",
    "easytier-contrib/easytier-ffi",
    "easytier-contrib/easytier-uptime",
    "easytier-contrib/easytier-android-jni",
]

[profile.dev]
panic = "unwind"
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
