[workspace]
resolver = "2"
members = [
    "easytier",
    "easytier-gui/src-tauri",
    "easytier-rpc-build",
    "easytier-web",
    "easytier-contrib/easytier-ffi",
    "easytier-contrib/easytier-uptime",
    "easytier-contrib/easytier-android-jni",
]
default-members = ["easytier", "easytier-web"]
exclude = [
    "easytier-contrib/easytier-ohrs", # it needs ohrs sdk
]

[profile.dev]
panic = "unwind"
debug = 2

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.ci]
inherits = "dev"
debug = 0
opt-level = 0

[profile.ci.package."*"]
opt-level = 0

[profile.ci.build-override]
opt-level = 0

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
