[package]
name = "easytier-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
easytier-core = { path = "../easytier-core" }
clap = { version = "4.4.8", features = ["unicode", "derive", "wrap_help"] }
tonic = "0.10"
thiserror = "1.0"
