[package]
name = "easytier-proto"
description = "EasyTier protobuf and generated RPC types."
homepage = "https://github.com/EasyTier/EasyTier"
repository = "https://github.com/EasyTier/EasyTier"
version = "2.6.4"
edition.workspace = true
rust-version.workspace = true
authors = ["kkrainbow"]
keywords = ["vpn", "p2p", "network", "easytier"]
categories = ["network-programming"]
license-file = "../LICENSE"
build = "build/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.74"
auto_impl = "1.1.0"
base64 = "0.22"
bytes = "1.5.0"
chrono = { version = "0.4.37", features = ["serde"], optional = true }
cidr = { version = "0.3.1", features = ["serde"] }
delegate = { version = "0.13.5", optional = true }
derivative = { version = "2.2.0", optional = true }
derive_more = { version = "2.1.1", features = ["full"], optional = true }
hmac = "0.12.1"
prost = "0.14.3"
prost-reflect = { version = "0.16.4", default-features = false, features = ["derive", "serde"] }
prost-wkt-types = "0.7.1"
pbjson = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["time"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.5.0", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[build-dependencies]
indoc = "2.0"
pbjson-build = "0.9.0"
proc-macro2 = "1"
prost-build = "0.14.3"
prost-reflect-build = "0.16.0"
quote = "1"

[target.'cfg(windows)'.build-dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
zip = "4.0.0"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
] }
uuid = { version = "1.5.0", features = [
    "v4",
    "fast-rng",
] }

[features]
default = ["full"]
full = [
    "api",
    "core",
    "faketcp",
    "magic-dns",
    "quic",
    "utils",
    "websocket",
    "wireguard",
    "zstd",
]
api = ["core", "dep:chrono"]
core = []
faketcp = []
magic-dns = []
quic = []
utils = ["dep:delegate", "dep:derivative", "dep:derive_more"]
websocket = []
wireguard = []
zstd = []
