[package]
name = "easytier-web"
version = "0.1.0"
edition = "2021"

[dependencies]
easytier = { path = "../easytier" }
tracing = { version = "0.1", features = ["log"] }
anyhow = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
dashmap = "6.1"
url = "2.2"
async-trait = "0.1"

axum = { version = "0.7", features = ["macros"] }
axum-login = { version = "0.16" }
password-auth = { version = "1.0.0" }
sqlx = { version = "0.8", features = ["sqlite"] }
axum-messages = "0.7.0"
tower-sessions-sqlx-store = { version = "0.14.1", features = ["sqlite"] }
tower-sessions = { version = "0.13.0", default-features = false, features = [
    "signed",
] }

# for captcha
raqote = { version = "0.8", default-features = false, features = ["text"] }
png = "0.17"
font-kit = "0.14"
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
base64 = "0.22"
rand = "0.8"


clap = { version = "4.4.8", features = [
    "string",
    "unicode",
    "derive",
    "wrap_help",
] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
