[package]
name = "health-check-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "health-check"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# EasyTier core
easytier = { git = "https://github.com/EasyTier/EasyTier.git" }
